# loop

./: .gitignore  Cargo.toml  Goal.loop  LICENSE  LOOP_ENGINEERING.md  OVERVIEW.md  README.md  ROADMAP.md  generate_history.py  main.loop  test.loop
.github/workflows/: release.yml  rust.yml
Memory/: memory.json
extensions/vscode/: LICENSE  README.md  language-configuration.json  package.json
extensions/vscode/snippets/: loop.json
extensions/vscode/syntaxes/: loop.tmLanguage.json
npm/: README.md  install.js  package.json
src/: init.rs  main.rs  scaffold.rs
src/cli/: mod.rs  provider.rs  tui.rs
src/parser/: ast.rs  checker.rs  loop.pest  mod.rs  parser.rs
src/runtime/: engine.rs  interceptor.rs  interpreter.rs  mod.rs  sandbox.rs
src/storage/: mod.rs
