[package]
name = "loop_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sled = "0.34"
sha2 = "0.10"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
thiserror = "1.0"
tempfile = "3.8"

[[bin]]
name = "loop"
path = "src/main.rs"
