[package]
name        = "loop_cli"
version     = "0.2.0"
edition     = "2021"
description = "Loop Engineering Language — structured .loop files for AI agent task execution"
license     = "MIT"
homepage    = "https://github.com/squareexp/loop"
repository  = "https://github.com/squareexp/loop"
documentation = "https://github.com/squareexp/loop#readme"
readme      = "README.md"
keywords    = ["ai", "agent", "dsl", "task-runner", "llm"]
categories  = ["command-line-utilities", "development-tools"]
exclude     = ["extensions/", "npm/", "*.loop", "target/"]

[dependencies]
pest        = "2.7"
pest_derive = "2.7"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
bincode     = "1.3"
sled        = "0.34"
sha2        = "0.10"
tokio       = { version = "1.36", features = ["full"] }
reqwest     = { version = "0.11", features = ["json"] }
clap        = { version = "4.4", features = ["derive"] }
ratatui     = "0.26"
crossterm   = "0.27"
thiserror   = "1.0"
tempfile    = "3.8"

[[bin]]
name = "loop"
path = "src/main.rs"
